# Network-Clustering

./: CMakeLists.txt  ErrorHandler.c  ErrorHandler.h  LinkedList.c  LinkedList.h  README.md  VerticesGroup.c  VerticesGroup.h  cluster  cluster.c  cluster.h  defs.h  division.c  division.h  graph.c  graph.h  makefile  matrix.c  matrix.h  modularity.c  modularity.h  quicksort.c  quicksort.h  spmat.c  spmat.h  tester.c  tester.h
tests/: cluster.h  graph3-adjMat.txt  graph4-adjMat.txt  graph6-adjMat.txt  graph7-adjMat.txt  readme.ipynb  readme.md  source code.sagews  testUtils.c  testUtils.h  tester.c  tester.h
tests/graphs/: graph1-adjMat.txt  graph10-adjMat.txt  graph2-adjMat.txt  graph5-adjMat.txt  graph8-adjMat.txt  graph9-adjMat.txt  testUtils.c  testUtils.h
tests/neoTests/: 1000graph-mudulu35  100graph-mudulu30  20-30a  20-30c  300a  300c  30a  30c  30empty  3empty  60-100a  60-100c  main.c
